--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-﻿/BlendFBX/DDR Pads SPP/
-/BlendFBX/Arcade Machine SPP/
-/BlendFBX/ArcadeMachine Blend.blend1
+﻿/BlendFBX/ArcadeMachine Blend.blend1
 /BlendFBX/ArcadeMachine Blend.blend1.meta
-/BlendFBX/DDR Pads SPP.meta
-/BlendFBX/Arcade Machine SPP.meta
-/Test Scene.unity
-/Test Scene.unity.meta
+/BlendFBX/.ArcadeMachine Blend.blend
+/BlendFBX/.ArcadeMachine Blend.blend.meta
+/TexMat/DDR Pads SPP/
+/TexMat/Arcade Machine SPP/
+/TexMat/.Arcade Machine SPP/
+/TexMat/.DDR Pads SPP/
