Reset Button and Bugfixes
Added a reset button
Fixed an issue where when the player leaves the game during a round change the game still continues

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-﻿/BlendFBX/ArcadeMachine Blend.blend1
-/BlendFBX/ArcadeMachine Blend.blend1.meta
-/BlendFBX/.ArcadeMachine Blend.blend
-/BlendFBX/.ArcadeMachine Blend.blend.meta
-/TexMat/DDR Pads SPP/
+﻿/TexMat/DDR Pads SPP/
 /TexMat/Arcade Machine SPP/
 /TexMat/.Arcade Machine SPP/
 /TexMat/.DDR Pads SPP/
+/.idea/.idea.HellDivers Stratagem Hero.dir/.idea/workspace.xml
+/.idea/.idea.HellDivers Stratagem Hero.dir/.idea/projectSettingsUpdater.xml
+/BlendFBX/.ArcadeMachine FBX Bkp.fbx
